Fix Fixed Nav Overlap for mobile

--- a/wp-content/themes/bah/less/partials/_header.less
+++ b/wp-content/themes/bah/less/partials/_header.less
@@ -126,7 +126,9 @@
            .main-menu  {
              ul {
              border-bottom:none;
+             @media @breakpoint-large {   
              margin-top:-10px;
+             }
              @media @breakpoint-large {   
               a {
                     padding-top:30px;
